Undo the `illegal reflective access` fix, which fails with Java 8.
PiperOrigin-RevId: 317139320
Change-Id: I0d16e3501c6b097790508dd0b06dbfd7995c3be1